--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,9 @@
     "service_worker": "background.js",
     "type": "module"
   },
+  "chrome_url_overrides": {
+    "newtab": "./stickyNote_html_page/index.html"
+  },
   "web_accessible_resources": [
     {
       "resources": ["assets/*", "lib/*", "stickyNote_html_page/*", "styles/*"],
