--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "Sticky Notes",
-  "description": "A Chrome extension to create and save sticky notes.",
+  "name": "__MSG_appName__",
+  "description": "__MSG_appDescription__",
   "version": "1.0",
   "action": {
     "default_popup": "stickyNotes/stickyNotes.html",
     "default_icon": "images/hello_extensions.png"
   },
+  "default_locale": "en",
   "permissions": ["activeTab", "storage", "tabs", "scripting"],
   "content_scripts": [
     {
       "js": [
+        "scripts/custom_script/localizedText.js",
         "scripts/content_script/content_script.js",
         "scripts/content_script/draggable.js",
         "scripts/content_script/content_popup.js",
